syntax = "proto3";
option csharp_namespace = "Lachain.Proto";
option java_package = "com.latoken.proto";
import "default.proto";
import "block.proto";

// consensus state stored in blockchain

message ValidatorCredentials {
    ECDSAPublicKey public_key = 1;
    string resolvable_address = 2;
    bytes threshold_signature_public_key = 3;
}

message ConsensusState {
    bytes tpke_public_key = 1;
    repeated ValidatorCredentials validators = 3;
}

// HBBFT messages

message Validator {
    int64 version = 1;
    reserved 2 to 3;
    int64 era = 4;
}

message BValMessage {
    bool value = 1;
    int64 agreement = 2;
    int64 epoch = 3;
}

message AuxMessage {
    bool value = 1;
    int64 agreement = 2;
    int64 epoch = 3;
}

message ConfMessage {
    repeated bool values = 1;
    int64 agreement = 2;
    int64 epoch = 3;
}

message CommonCoinMessage {
    bytes signature_share = 1;
    int64 agreement = 2;
    int64 epoch = 3;
}

message TPKEPartiallyDecryptedShareMessage {
    bytes share = 1;
    int32 decryptor_id = 2;
    int32 share_id = 3;
}

message TPKEHiddenPolynomialMessage {
    repeated bytes coeffs_g1 = 1;
    repeated bytes coeffs_g2 = 2;
}

message TPKEConfirmationHashMessage {
    repeated bytes hashes = 1;
}

message ValMessage {
    int32 senderId = 1;
    UInt256 merkleTreeRoot = 2;
    repeated UInt256 merkleProof = 3;
    bytes data = 4;
}

message ECHOMessage {
    int32 senderId = 1;
    UInt256 merkleTreeRoot = 2;
    repeated UInt256 merkleProof = 3;
    bytes data = 4;
}

message ReadyMessage {
    int32 senderId = 1;
    UInt256 merkleTreeRoot = 2;
}

message SignedHeaderMessage {
    BlockHeader header = 1;
    Signature signature = 2;
}

message ConsensusMessage {
    Validator validator = 1;
    oneof payload {
        BValMessage bval = 2;
        AuxMessage aux = 3;
        ConfMessage conf = 4;
        CommonCoinMessage coin = 5;
        TPKEPartiallyDecryptedShareMessage decrypted = 6;
        ValMessage val_message = 13;
        ECHOMessage echo_message = 14;
        ReadyMessage ready_message = 15;
        SignedHeaderMessage signed_header_message = 16;
    }
    reserved 7, 9 to 12;
}